--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" rel="stylesheet"/>
-  <title>rmc-picker@5.0.5 - React Mobile Picker Component(web and react-native)</title>
+  <title>rmc-picker-scroll@5.0.5 - React Mobile Picker Component(web and react-native), fork from rmc-picker, add scroll visible effect and can click to scroll</title>
   <style>
     @font-face {
       font-family: octicons-anchor;
@@ -737,7 +737,7 @@
 
 <body>
 <div class="header">
-  <h1>rmc-picker@5.0.5</h1>
+  <h1>rmc-picker-scroll@5.0.5</h1>
 </div>
 <div class="examples">
   <h3>EXAMPLES</h3>
@@ -762,7 +762,10 @@
 <div id="readme" class="boxed-group">
   <h3>README.md</h3>
   <div class="markdown-body">
-    <h1>rmc-picker<a id="user-content-rmc-picker" name="rmc-picker" class="anchor" aria-hidden="true" href="#rmc-picker"><span class="octicon octicon-link"></span></a></h1><hr>
+    <h1>rmc-picker-scroll<a id="user-content-rmc-picker-scroll" name="rmc-picker-scroll" class="anchor" aria-hidden="true" href="#rmc-picker-scroll"><span class="octicon octicon-link"></span></a></h1><hr>
+<blockquote>
+<p>fork from rmc-picker, add scroll visible effect and can click to scroll</p>
+</blockquote>
 <p>React Mobile Picker Component (web and react-native)</p>
 <p><a href="http://npmjs.org/package/rmc-picker" title="null"><img src="http://img.shields.io/npm/v/rmc-picker.svg?style=flat-square" alt="NPM version"></a>
 <img src="https://img.shields.io/badge/react--native-%3E%3D_0.30.0-green.svg" alt="react-native">
@@ -934,7 +937,7 @@ npm run chrome-test</code></pre></div><h2>Coverage<a id="user-content-coverage" 
 
   </div>
 </div>
-<a href="https://github.com/react-component/m-picker"><img style="position: absolute; top: 0; right: 0; border: 0;"
+<a href="https://github.com/cccRaim/m-picker"><img style="position: absolute; top: 0; right: 0; border: 0;"
                             src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67"
                             alt="Fork me on GitHub"
                             data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
