--- a/examples/multi-picker.native.html
+++ b/examples/multi-picker.native.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>multi-picker.native.js - example - rmc-picker-scroll@5.0.5</title>
+  <title>multi-picker.native.js - example - rmc-picker-scroll@5.0.6</title>
   <meta name="viewport"
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta charset="utf-8"/>
@@ -257,13 +257,13 @@ Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-lic
     document.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"'+'>'+'<'+'/'+'script>');
   }
   </script>
-  
+  <link rel="stylesheet" href="../common.css" />
 </head>
 
 <body>
   <div class="container">
     <div class="header">
-      <h1>rmc-picker-scroll@5.0.5</h1>
+      <h1>rmc-picker-scroll@5.0.6</h1>
 
       <p>React Mobile Picker Component(web and react-native), fork from rmc-picker, add scroll visible effect and can click to scroll</p>
     </div>
